<resources>
    <string name="app_name">WEATHER_TEACHER_WORK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city">City</string>
    <string name="request">Request</string>
    <string name="detail">Detail</string>
    <string name="argument">argument</string>
    <string name="text">Text</string>
    <string name="request_city">Искать город</string>
    <string name="name_city">Название города</string>
    <string name="entter_nameCity">Введите название города</string>
    <string name="more_detaild">Подробное информация</string>
    <string name="full_name">Full name</string>
    <string name="stop_download">Stop download</string>
    <string name="start_download">Start download</string>
    <string name="to_anim">Перейти к анимации</string>
</resources>