<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_sky"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".fragment.MainFragment">

    <EditText

        android:id="@+id/et_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/entter_nameCity"
        android:padding="24dp"
        android:textColorHint="#88008EFF"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/request_city"
        android:textSize="32sp" />

        <TextView
            android:id="@+id/tv_city_meaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/yellow"
            android:text="@string/name_city"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_city"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:background="@color/blue"
            android:text="@string/city"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />



    <Button
        android:id="@+id/btn_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/more_detaild"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_anim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/to_anim"
        android:textSize="24sp" />

</LinearLayout>